<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Stop EditText from having focus on startup-->
    <!--URL: https://stackoverflow.com/a/1612017/9849310-->
    <!-- focusable / focusableInTouchMode -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bonus_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bonus_question_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint=""
            android:padding="8dp"
            android:text="@string/bonus_round_title"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bonus_question_1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/example_quote"
            android:padding="4dp"
            android:text="@string/bq1"
            android:textColor="#000000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/bonus_checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/boption1" />

            <CheckBox
                android:id="@+id/bonus_checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/boption2" />

            <CheckBox
                android:id="@+id/bonus_checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/boption3" />

        </LinearLayout>

        <TextView
            android:id="@+id/bonus_question_2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint=""
            android:padding="18dp"
            android:text="@string/bq2"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/bonus_answer_2_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/check_button_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/hillary_layer"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/trump_layer"
            android:gravity="center"
            android:onClick="displayResult"
            android:padding="18dp"
            android:text="@string/submit_button"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>