<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Stop EditText from having focus on startup-->
    <!--URL: https://stackoverflow.com/a/1612017/9849310-->
    <!-- focusable / focusableInTouchMode -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="18dp"
            android:text="@string/welcome"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/amount_questions"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name_input_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/user_name_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:text=""
            android:textSize="16sp" />

        <Button
            android:id="@+id/start_quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/hillary_layer"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/trump_layer"
            android:gravity="center"
            android:onClick="startQuiz"
            android:padding="18dp"
            android:text="@string/start_button"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="18dp"
            android:text="@string/disclaimer"
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>