<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Stop EditText from having focus on startup-->
    <!--URL: https://stackoverflow.com/a/1612017/9849310-->
    <!-- focusable / focusableInTouchMode -->
    <!--This first LinearLayout is needed as ScrollView can ONLY have one (1) child-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quiz_quote_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/example_quote"
            android:padding="18dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/possible_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_option1_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/example_candidate1" />

                <RadioButton
                    android:id="@+id/question_option2_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/example_candidate2" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/question_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="18dp"
            android:text="@string/quiz_which_question"
            android:textSize="16sp" />

        <Button
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/hillary_layer"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/trump_layer"
            android:gravity="center"
            android:onClick="nextQuestion"
            android:padding="18dp"
            android:text="@string/submit_button"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/answer_result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="18dp"
            android:text=""
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>